Solved content overflow issue and better notification implementation

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -47,14 +47,13 @@ $dark-action: #83BCA9;
 }
 
 html, body {
-  min-height: 100%;
+  min-height: 100vh;
   background: var(--primary);
   color: var(--text);
 }
 
 #app {
-  width: 100%;
-  height: 100%;
+  min-height: 100vh;
 
   display: flex;
   flex-direction: column;
